# Spine

./: .gitignore  README.md  pyproject.toml  train
run_configs/: classification.yaml  e2e_multiclass_segmentation.yaml  encoder-only.yaml  feature-based.yaml  low_class.yaml  metadataprediction.yaml  multiclass_segmentation.yaml  patches.yaml  segmentation.yaml  vector_classification.yaml  vector_regression.yaml  volume_segmentation.yaml
scripts/: format_for_spine_parsenet.py  random_hyperparam_config_generator.py
spine/: __init__.py  run.py
spine/annotators/: annotator_base.py  vector_annotator.py
spine/cli/: cli.py
spine/dataloader/: dataloader.py
spine/datasets/: augmentation.py  feature_dataset.py  metadata_prediction_dataset.py  patch_segmentation_dataset.py  sample.py  segmentation_dataset.py  vector_table_graphs_dataset.py
spine/evaluate/: analyze_edge_cases.py  analyze_index_list.py  classic_ml.py  eval_instance_seg_model.py  eval_splitting.py  load_model.py  metadata.py  volume_size_in_gt.py
spine/inference/: instance_segmentation.py  onnx_model.py
spine/instance_separation/: instance_separation.py
spine/plotting/: bmi.py  classification_correlation.py  patient_metadata.py  plot_slice.py  plot_statistics.py  read_npz_eval_per_roi_accuracy.py  show_plane_splitting_3d.py  ydata_profile_report.py
spine/resources/: paths.py  preloaded.py
spine/scripts/: split_train_val_test.py
spine/trainer/: learning_rate_finder.py
spine/utils/: log_dir.py  profiling.py  proxy_class.py
spine/visualisation/: color_palettes.py
spine/visualisation/blender/: gen_obj.py  open_in_blender.py
spine_annotator/: run.py
spine_annotator/annotators/: annotator_base.py  vector_annotator.py
spine_annotator/cli/: cli.py
spine_annotator/dataloader/: dataloader.py  statistics.py
spine_annotator/datasets/: feature_dataset.py  metadata_prediction_dataset.py  patch_segmentation_dataset.py  sample.py  segmentation_dataset.py  vector_table_graphs_dataset.py
spine_annotator/evaluate/: analyze_edge_cases.py  analyze_index_list.py  classic_ml.py  eval_created_stats.py  eval_instance_seg_model.py  eval_splitting.py  load_model.py  metadata.py  volume_size_in_gt.py
spine_annotator/inference/: onnx_model.py
spine_annotator/instance_separation/: instance_separation.py
spine_annotator/plotting/: bmi.py  classification_correlation.py  patient_metadata.py  plot_slice.py  plot_statistics.py  read_npz_eval_per_roi_accuracy.py  show_plane_splitting_3d.py  ydata_profile_report.py
spine_annotator/resources/: preloaded.py
spine_annotator/scripts/: format_results.py  split_train_val_test.py  test_patient_ids.txt
spine_annotator/spine_types/: disc.py  labels.py  line_segment.py  plane.py  roi.py  vertebra.py
spine_annotator/trainer/: learning_rate_finder.py
spine_annotator/utils/: fix_validations_step_bar.py
spine_annotator/visualisation/: color_palettes.py
spine_annotator/visualisation/blender/: blender_script.py  gen_obj.py  open_in_blender.py
spine_segmentation/: __init__.py
spine_segmentation/annotators/: annotator_base.py  vector_annotator.py
spine_segmentation/cli/: cli.py
spine_segmentation/datasets/: augmentation.py  feature_dataset.py  metadata_prediction_dataset.py  patch_segmentation_dataset.py  path_helper.py  sample.py  segmentation_dataset.py  vector_table_graphs_dataset.py
spine_segmentation/evaluate/: analyze_edge_cases.py  analyze_index_list.py  classic_ml.py  eval_instance_seg_model.py  eval_splitting.py  load_model.py  metadata.py  volume_size_in_gt.py
spine_segmentation/inference/: instance_segmentation.py  onnx_model.py
spine_segmentation/instance_separation/: instance_separation.py
spine_segmentation/losses/: diffis1.py
spine_segmentation/model_downloader/: model_downloader.py
spine_segmentation/plotting/: bmi.py  classification_correlation.py  patient_metadata.py  plot_slice.py  plot_statistics.py  read_npz_eval_per_roi_accuracy.py  show_plane_splitting_3d.py  ydata_profile_report.py
spine_segmentation/resources/: paths.py  preloaded.py
spine_segmentation/scripts/: split_train_val_test.py
spine_segmentation/spine_types/: disc.py  labels.py  spine.py  vertebra.py
spine_segmentation/trainer/: learning_rate_finder.py
spine_segmentation/utils/: globals.py
spine_segmentation/visualisation/: color.py  color_palettes.py
spine_segmentation/visualisation/blender/: gen_obj.py  open_in_blender.py
tests/: test_inference.py
