[tool.poetry]
name = "spine_annotator"
version = "1.0.0"
description = "A Spine Module to Annotate MRI-Scans"
authors = [
    "Brutenis Gliwa <brutenis@gmail.com>",
]
readme = "README.md"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
# dependencies that should stay fixed until manual update

python = ">=3.8.1,<3.12.0"
pandas = "<2"                           # basic
numpy = "^1.23.0"                       # basic
nibabel = "^5.1.0"                      # load nifti images
loguru = "^0.7.0"                       # logging
mlflow = "^2.4.0"                       # logging online
tabulate = "^0.9.0"                     # pretty print tables in markdown
matplotlib = "^3.7.1"                   # plotting
vispy = "^0.13.0"                       # plotting 3D
pyside6 = "^6.5.0"                      # required for vispy plotting
scikit-learn = "^1.2.2"                 # ML
torchvision = "^0.15.2"                 # ML
torch-geometric = "^2.3.1"              # gnn in pytorch
datasets = "^2.12.0"                    # datasets for gnn
segmentation-models-pytorch = "^0.3.3"  # pretrained models in pytorch
connected-components-3d = "^3.12.1"     # algorithms for finding connected compoents
websockets = "^11.0.3"                  # otherwise there is an error with pydantic if the version is too new
fastapi = ">=0.80"                      # otherwise there is an error with pydantic if the version is too new
jsonargparse = {extras = ["signatures"], version = "^4.23.1"}
kornia = "^0.6.12"
monai = "^1.2.0"
openmim = "^0.3.9"
onnx = "^1.14.1"
torch = "^2.0.1"
onnxruntime = "^1.15.1"
netron = "^7.1.5"
xgboost = "^1.7.6"
pyqt6 = "^6.5.2"
pydicom = "^2.4.3"
onnxruntime-gpu = "^1.15.1"
seaborn = "^0.13.0"
efficientnet-pytorch-3d = {git = "https://github.com/shijianjian/EfficientNet-PyTorch-3D"}
lightning = "^2.2.1"

[build-system]
requires = ["poetry-core"]

build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-rA -s -v --junit-xml=junit.xml"
