[tool.poetry]
name = "spine-segmentation"
version = "0.2.9"
description = "Anatomical labeling of the spine in small field-of-view MRI scans"
authors = [
    "Brutenis Gliwa <brutenis@gmail.com>",
]
readme = "README.md"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13.0"
numpy = "^1.23.0"                       # basic
#torch = "^2.1.1"
#torch-geometric = "^2.3.1"              # gnn in pytorch
#lightning = "^2.2.1"
# onnx = "^1.14.1"
onnxruntime = "^1.15.1"
onnxruntime-gpu = "^1.15.1"
#torchvision = "^0.17.2"
tqdm = "^4.66.2"
requests = "^2.28.0"
xxhash = "^3.4.1"
connected-components-3d = "^3.12.1"     # algorithms for finding connected compoents
pandas = "<2.0"
scikit-learn = "^1.2.2"                 # ML
seaborn = "^0.13.0"
nibabel = "^5.1.0"                      # load nifti images
pydicom = "^2.4.3"
loguru = "^0.7.2"

[tool.poetry.group.training]
optional = true

[tool.poetry.group.training.dependencies]
vispy = "^0.13.0"                       # plotting 3D
matplotlib = "^3.7.1"                   # plotting
mlflow = "^2.4.0"                       # logging online
tabulate = "^0.9.0"                     # pretty print tables in markdown
pyside6 = "^6.5.0"                      # required for vispy plotting
datasets = "^2.12.0"                    # datasets for gnn
segmentation-models-pytorch = "^0.3.3"  # pretrained models in pytorch
websockets = "^11.0.3"                  # otherwise there is an error with pydantic if the version is too new
fastapi = ">=0.80"                      # otherwise there is an error with pydantic if the version is too new
jsonargparse = {extras = ["signatures"], version = "^4.23.1"}
kornia = "^0.6.12"
monai = "^1.2.0"
openmim = "^0.3.9"
netron = "^7.1.5"
xgboost = "^1.7.6"
pyqt6 = "^6.5.2"
efficientnet-pytorch-3d = {git = "https://github.com/shijianjian/EfficientNet-PyTorch-3D"}

[build-system]
requires = ["poetry-core"]

build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-rA -s -v --junit-xml=junit.xml"
